--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: Homepage Germanistentag22 Panel "Weder Fail noch Lobgesang: Nicht-eindeutige Wertung von Literatur im Digitalen Raum"
+logo: assets/pics/stars.jpg
+description: "pic by Towfiqu barbhuiya (unsplash)"
